I add checkout for payment in shop controller ,changed the order routes and add userEmail after login

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -35,9 +35,7 @@
                     <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
                 </li>
             <% } else { %>
-
-            
-            
+                <li class="main-header__item"style="color:white"><%=userEmail%></li>
                 <li class="main-header__item">
                     <form action="/logout" method="post">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
